refactor: rearrange code, capability API
